fixed topbar and gachaplanner page overlap

--- a/front-end/src/Components/GachaPlanner/gachaPlanner.css
+++ b/front-end/src/Components/GachaPlanner/gachaPlanner.css
@@ -16,7 +16,7 @@ html {
     flex-direction: row;
     justify-content: center;
     gap: 75px;
-    padding-top: 50px;
+    padding-top: 120px;
     padding-bottom: 100px;
     /* height: 100vh; */
 }
